--- a/(2023) Fraga et al.tex
+++ b/(2023) Fraga et al.tex
@@ -480,7 +480,7 @@ D_i, O_i, I_i \in  \mathbb{Z}^+ \quad \forall i
 \section{Tests and results}
 \label{sec:results}
 
-To test the developed model and analytical solution method, we created a solver in C++ and a solver in LINGO (both available at github.com). The tests were performed on a notebook with an Intel i7 processor. We tested the solvers developed for the benchmarks presented below. 
+To test the developed model and analytical solution method, we created a solver in C++ (https://github.com/tbfraga/project-combinatorial-optimization-problems/tree/main/combinatorial-optimization-solver) and a solver in LINGO (https://github.com/tbfraga/project-combinatorial-optimization-problems/tree/main/lingo-solvers/MPBPTMP). The tests were performed on a notebook with an Intel i7 processor. We tested the solvers developed for the benchmarks presented below (and available on github https://github.com/tbfraga/project-combinatorial-optimization-problems/tree/main/lingo-solvers/MPBPTMP/benchmarcks).
 
 \begin{table}[h]
 \begin{center}
