--- a/(2023) Fraga et al.tex
+++ b/(2023) Fraga et al.tex
@@ -125,8 +125,10 @@
 
 %%Research highlights
 \begin{highlights}
-\item Research highlight 1
-\item Research highlight 2
+\item this paper presents a brief bibliographic review on multi-product batch problems;
+\item presents a new combinatorial optimization problem named Multi-product Batch Processing Time Maximization (MPBPTM) problem;
+\item presents a linear integer programming model for the MPBPTM problem;
+\item proposes a polynomial time analytical method for solving the MPBPTM problem.
 \end{highlights}
 
 \begin{keyword}
@@ -599,7 +601,7 @@ RMBPTMP 10,000 & 70 & 168.87 & 70 & 0.006 \\
 \end{center}
 \end{table}
 
-It is important to point out that the LINGO solver was developed with the purpose of validating the results found by the proposed analytical method. As the analytical method is non-polynomial, we did not intend to compare machine processing times, however it is possible to verify that both solvers are capable of finding optimal solutions for the proposed benchmarks very quickly, even for very large problems.
+It is important to point out that the LINGO solver was developed with the purpose of validating the results found by the proposed analytical method. As the analytical method is a polynomial method, we did not intend to compare machine processing times, however it is possible to verify that both solvers are capable of finding optimal solutions for the proposed benchmarks very quickly, even for very large problems.
 
 We have considered here a one-day period problem, so in a future work we will study the complexities of solving a multi period problem and try to propose new solution methods if needed. 
 
