--- a/(2023) Fraga et al.tex
+++ b/(2023) Fraga et al.tex
@@ -162,7 +162,7 @@ In the next sections, a presentation of problem is made along with an applicatio
 
 The multiproduct batch processing time maximization problem arises when a set of different products are processed simultaneously in a same production batch. In this problem, it is considered that the quantity produced of each product is directly proportional to the processing time, however, with a different constant of proportionality (prodction rate) for each product. In addition, there is a maximum quantity allowed for the production of batch products, defined both individually and for the set. The maximum production quantity of each product is mainly defined according to the demand for the product. However, it is still possible to stock the products and/or send them to the outlets. In both cases, there is a stocking/shipping limit for each product and a stocking/shipping limit for the set of products in the batch. Also, there is a time limit available for processing the batch. The problem consists of defining the maximum processing time for the batch, respecting the limitations related to the quantities produced. For a better understanding of the problem, an example is presented below.
 
-\emph{Example:} A certain machine must process a batch containing 2 different products: A and B. The production rate of A is 60 g/min while the production rate of B is 40 g/min. The factory has free stock for a maximum of 3000 g of any product, and, according to the company inventory policy, an additional 3000 g of product A and 2000 g of product B may be stocked at the factory. There is a demand for 1000 g of product A and 500 g of product B. The factory has an outlet that has free space in stock of 1000 g, which can receive a maximum of 600 g of each product. A maximum time of 100 minutes of this machine can be allocated for processing this batch. What is the maximum possible time for processing this batch ? 
+\emph{Example:} A certain machine must process a batch containing 2 different products: A and B. The production rate of A is 60 g/min while the production rate of B is 40 g/min. The factory has free stock for a maximum of 3000 g of any product, and, according to the company's inventory policy, a maximum of 3000 g of product A and 2000 g of product B can be stocked at the factory. There is a demand for 1000 g of product A and 500 g of product B. The factory has an outlet that has free space in stock of 1000 g, which can receive a maximum of 600 g of each product. A maximum time of 100 minutes of this machine can be allocated for processing this batch. What is the maximum possible time for processing this batch ? 
 
 \section{Mathematical model}
 \label{sec:mathModel}
@@ -239,7 +239,7 @@ T, D_i, O_i, I_i \in  \mathbb{Z}^+ \quad \forall i
 
 where: \\
 
-Constraints in (2) relate the quantity produced, $P_i$, to batch processing time $T$. Constraints in (3) calculate the quantity produced, $P_i$, as a function of the primary variables, $D_i$, $O_i$ and $I_i$. Constraints in (4), (5), and (7) state that the quantity delivered to demand, the quantity shipped to the autlets, and the factory-stocked quantity of each product must be less than their respective known limits. Constraints (6) and (8) state that both the sum of product quantities sent to the autlets and the sum of product quantities stored in the factory must be less than their respective maximum allowed values. The restriction in (9) establishes that there is a batch processing time limit, $\textrm{Z}$, that must be respected. And finally, the constraints in (10) inform the nature of the decision variables.
+Constraints in (2) relate the quantity produced, $P_i$, to batch processing time $T$. Constraints in (3) calculate the quantity produced, $P_i$, as a function of the primary variables, $D_i$, $O_i$ and $I_i$. Constraints in (4), (5), and (7) state that the quantity delivered to demand, the quantity shipped to the autlets, and the factory-stocked quantity of each product must be less than their respective known limits. Constraints (6) and (8) state that both the sum of product quantities sent to the autlets and the sum of product quantities stocked in the factory must be less than their respective maximum allowed values. The restriction in (9) establishes that there is a batch processing time limit, $\textrm{Z}$, that must be respected. And finally, the constraints in (10) inform the nature of the decision variables.
 
 \section{Analytical solution}
 \label{sec:analyticalSol}
@@ -467,62 +467,7 @@ O_i, I_i \in  \mathbb{Z}^+ \quad \forall i
 \section{Tests and results}
 \label{sec:results}
 
-To test the developed model and analytical solution method, we created a solver in C++ (https://github.com/blinded) and a solver in LINGO (https://github.com/blinded). The tests were performed on a notebook with an Intel i7 processor. We tested the solvers developed for the benchmarks presented below.
-
-\begin{table}[h]
-\begin{center}
-\begin{tabular}[c]{c r r r}
-$i$ & 1 & 2 & total \\
-\cline {1-4} \\
-$\textrm{p}_i$ & 60 & 40 & \\
-$\textrm{UD}_i$ & 1000 & 500 & \\
-$\textrm{UO}_i$ & 600 & 600 & 1000 \\
-$\textrm{UI}_i$ & 3000 & 2000 & 3000 \\
-\cline {1-4} \\
-& & $\textrm{Z}$ & 100 \\
-\end{tabular}
-\label{tab:MBPTMP 001}
-\caption{Benchmark MBPTMP 001}
-\end{center}
-\end{table}
-
-\begin{table}[h]
-\begin{center}
-\begin{tabular}[c]{c r r r r}
-$i$ & 1 & 2 & 3 & total \\
-\cline {1-5} \\
-$\textrm{p}_i$ & 60 & 40 & 50 \\
-$\textrm{UD}_i$ & 1000 & 500 & 800 \\
-$\textrm{UO}_i$ & 600 & 600 & 600 & 1500 \\
-$\textrm{UI}_i$ & 3000 & 2000 & 1000 & 3500 \\
-\cline {1-5} \\
-& & & $\textrm{Z}$ & 100 \\
-\end{tabular}
-\label{tab:MBPTMP 001}
-\caption{Benchmark MBPTMP 002}
-\end{center}
-\end{table}
-
-\begin{table}[h]
-\begin{center}
-\begin{small}
-\begin{tabular}[c]{c r r r r r r r r r r r }
-$i$ & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & total \\
-\cline {1-12} \\
-$\textrm{p}_i$ & 60 & 40 & 50 & 40 & 30 & 50 & 60 & 10 & 20 & 40\\
-$\textrm{UD}_i$ & 1000 & 500 & 800 & 500 & 400 & 500 & 2000 & 300 & 500 & 1000 \\
-$\textrm{UO}_i$ & 600 & 600 & 600 & 1500 & 300 & 200 & 500 & 800 & 0 & 200 & 3000 \\
-$\textrm{UI}_i$ & 3000 & 2000 & 1000 & 800 & 3000 & 1000 & 400 & 300 & 200 & 0 & 5000 \\
-\cline {1-12} \\
-& & & & & & & & & & $\textrm{Z}$ & 100 \\
-\end{tabular}
-\label{tab:MBPTMP 001}
-\caption{Benchmark MBPTMP 003}
-\end{small}
-\end{center}
-\end{table}
-
-For building larger benchmarks, we used the following functions: \\
+To test the developed model and analytical solution method, we created a solver in C++ (https://github.com/blinded) and a solver in LINGO (https://github.com/blinded). The tests were performed on a notebook with an Intel i7 processor. We tested the solvers developed for the benchmarks presented on Tables \ref{tab:MBPTMP001}, \ref{tab:MBPTMP002} and \ref{tab:MBPTMP003}, and for randon benchmarks generated by the following functions: \\
 
 \begin{equation}
 \textrm{p}_i = \textrm{rand}()\%30 + 10
@@ -560,9 +505,63 @@ For building larger benchmarks, we used the following functions: \\
 \textrm{Z} = 100;
 \end{equation}
 
-Randomly generated benchmarks were named RMBPTMP $\textrm{N}$, being $\textrm{N}$ the number of products. Seeking to enable the reproduction of the results, in the computational construction of the benchmarks we used the function srand((unsigned) source), where source is a defined value. To build the results presented in this work, we used source=0. The benchmarks used for the tests performed can be consulted at github.com/blinded.
 
-Table \ref{tab:results} presents the results obtained by applying the analytical method (C++ solver) and the LINGO solver for the solution of the previously presented benchmarks. \\
+\begin{table}[h]
+\begin{center}
+\begin{tabular}[c]{c r r r}
+$i$ & 1 & 2 & total \\
+\cline {1-4} \\
+$\textrm{p}_i$ & 60 & 40 & \\
+$\textrm{UD}_i$ & 1000 & 500 & \\
+$\textrm{UO}_i$ & 600 & 600 & 1000 \\
+$\textrm{UI}_i$ & 3000 & 2000 & 3000 \\
+\cline {1-4} \\
+& & $\textrm{Z}$ & 100 \\
+\end{tabular}
+\caption{Benchmark MBPTMP 001}
+\label{tab:MBPTMP001}
+\end{center}
+\end{table}
+
+\begin{table}[h]
+\begin{center}
+\begin{tabular}[c]{c r r r r}
+$i$ & 1 & 2 & 3 & total \\
+\cline {1-5} \\
+$\textrm{p}_i$ & 60 & 40 & 50 \\
+$\textrm{UD}_i$ & 1000 & 500 & 800 \\
+$\textrm{UO}_i$ & 600 & 600 & 600 & 1500 \\
+$\textrm{UI}_i$ & 3000 & 2000 & 1000 & 3500 \\
+\cline {1-5} \\
+& & & $\textrm{Z}$ & 100 \\
+\end{tabular}
+\caption{Benchmark MBPTMP 002}
+\label{tab:MBPTMP002}
+\end{center}
+\end{table}
+
+\begin{table}[h]
+\begin{center}
+\begin{small}
+\begin{tabular}[c]{c r r r r r r r r r r r }
+$i$ & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & total \\
+\cline {1-12} \\
+$\textrm{p}_i$ & 60 & 40 & 50 & 40 & 30 & 50 & 60 & 10 & 20 & 40\\
+$\textrm{UD}_i$ & 1000 & 500 & 800 & 500 & 400 & 500 & 2000 & 300 & 500 & 1000 \\
+$\textrm{UO}_i$ & 600 & 600 & 600 & 1500 & 300 & 200 & 500 & 800 & 0 & 200 & 3000 \\
+$\textrm{UI}_i$ & 3000 & 2000 & 1000 & 800 & 3000 & 1000 & 400 & 300 & 200 & 0 & 5000 \\
+\cline {1-12} \\
+& & & & & & & & & & $\textrm{Z}$ & 100 \\
+\end{tabular}
+\caption{Benchmark MBPTMP 003}
+\label{tab:MBPTMP003}
+\end{small}
+\end{center}
+\end{table}
+
+Randomly generated benchmarks were named RMPBPTMP $\textrm{N}$, being $\textrm{N}$ the number of products. Seeking to enable the reproduction of the results, in the computational construction of the benchmarks we used the function srand((unsigned) source), where source is a defined value. To build the results presented in this work, we used source=0. The benchmarks used for the tests performed can be consulted at github.com/blinded.
+
+Table \ref{tab:results} presents the results obtained by applying the analytical method (C++ solver) and the LINGO solver for the solution of the previously presented benchmarks.
 
 \begin{table}[h]
 \begin{center}
@@ -580,31 +579,32 @@ RMBPTMP 1,000 & 78 & 3.10 & 78 & 0.002\\
 RMBPTMP 10,000 & 70 & 168.87 & 70 & 0.006 \\
 \cline {1-5} \\
 \end{tabular}
-\label{tab:results}
 \caption{Results obtained with the LINGO solver and the analytical method}
+\label{tab:results}
 \end{footnotesize}
 \end{center}
 \end{table}
 
-It is important to point out that the LINGO solver was developed with the purpose of validating the results found by the proposed analytical method. As the analytical method is a polynomial time complexity method, we did not intend to compare machine processing times, however it is possible to verify that both solvers are capable of finding optimal solutions for the proposed benchmarks very quickly, even for very large problems.
+It is important to point out that the LINGO solver was developed with the purpose of validating the results found by the proposed analytical method. As the analytical method is a polynomial time complexity method, we did not intend to compare computational costs, however it is possible to verify that both solvers are capable of finding optimal solutions for the proposed benchmarks very quickly, even for very large problems.
 
-We have considered here a one-day period problem, so in a future work we will study the complexities of solving a multi period problem and try to propose new solution methods if needed. 
+We have considered here a one-day period problem, so in a future work we will study the complexities of solving a multi-period problem and try to propose new solution methods if needed. 
 
 
 \section{Contributions to this work}
 \label{sec:contributions}
 
-The work for the elaboration of this paper was carried out by tree contributors, as described below. Blinded, developed the detailed study on the plastic bag production process, which made it possible to identify the problem addressed in this paper. Blinded was responsible for identifying the problem, mathematical modeling, proposing an analytical solution, developing a solver in C ++ for applying the analytical solution and a solver in LINGO for validating the mathematical model and the results found by the first solver, developing benchmarks, and testing the model and analytical method proposed, as well as surveying bibliography and elaboration of the paper. Blinded contributed to the bibliographic survey. The authorship of this work follows as described contributions.
+The work for the elaboration of this paper was carried out by tree contributors, as described below. Blinded, developed the detailed study on the plastic bag production process, which made it possible to identify the problem addressed in this paper. Blinded was responsible for identifying the problem, mathematical modeling, proposing an analytical solution, developing a solver in C ++ for applying the analytical solution and a solver in LINGO for validating the mathematical model and the results found by the first solver, developing benchmarks, and testing the model and analytical method proposed, as well as surveying bibliography and elaboration of the paper. Blinded contributed to the bibliographic survey. The authorship of this work is distributed according to contributions described.
 
 \section{Conclusions and suggestions for future works}
 \label{sec:conclusions}
 
-In this paper we presented the Multi-product Batch Processing Time Maximization Problem, as well as a mathematical model and an analytical solution method for this problem. The mathematical model and analytical method were tested, respectively, by a solver developed with the LINGO tool, from LINDO Systems, and with a solver developed in C++ language. Optimum results were found for all proposed benchmarks, very quickly, even in the case of very large problems, which demonstrates the efficiency of the proposed method. As in this paper we considered a planning period of one day, in a future work we will study the complexities that arise when considering the same problem with more than one day of planning. We will also verify if there is the possibility of extending the proposed analytical method to solve a class of linear integer programming problems with similar characteristics to the studied problem.
+In this paper we presented the Multi-product Batch Processing Time Maximization Problem, as well as a mathematical model and an analytical solution method for this problem. The mathematical model and analytical method were tested, respectively, by a solver developed with the LINGO software, from LINDO Systems, and with a solver developed in C++ language. Optimum results were found for all proposed benchmarks, very quickly, even in the case of very large problems, which demonstrates the efficiency of the proposed method. As in this paper we considered a planning period of one day, in a future work we will study the complexities that arise when considering the same problem in a multi-period scenario. We will also verify if there is the possibility of extending the proposed analytical method to solve a class of linear integer programming problems with similar characteristics to the studied problem.
 
 \section{Acknowledgments}
 \label{sec:acknowledgments}
 
-We are enormously grateful to Coordenação de Aperfeiçoamento de Pessoal de Nível Superior (CAPES) and to Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPq) for the financial support provided to our projects. We also thank LINDO systems team for the LINGO software license, without which this work would not have been possible and the to the owner of the company in the plastics sector, who allowed us to learn about his company's production process. Finally, we would like to thank Pró-reitoria de Extensão e Cultura da UFPE (PROExC) and the Research Director of Propesqi (Pró-reitoria de Pesquisa e Inovação da UFPE) for their support and recognition of our work, and dear Professors Antônio José da Silva Neto and João Flávio Vieira de Vasconcellos from IPRJ/UERJ, who contributed significantly to the formation of essential skills for the development of our projects. We also thank my co-worker Marcos Luiz Henrique, for having helped by evaluating the mathematical model and solution method proposed in this paper.
+Blinded.
+%We are enormously grateful to Coordenação de Aperfeiçoamento de Pessoal de Nível Superior (CAPES) and to Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPq) for the financial support provided to our projects. We also thank LINDO systems team for the LINGO software license, without which this work would not have been possible and the to the owner of the company in the plastics sector, who allowed us to learn about his company's production process. Finally, we would like to thank Pró-reitoria de Extensão e Cultura da UFPE (PROExC) and the Research Director of Propesqi (Pró-reitoria de Pesquisa e Inovação da UFPE) for their support and recognition of our work, and dear Professors Antônio José da Silva Neto and João Flávio Vieira de Vasconcellos from IPRJ/UERJ, who contributed significantly to the formation of essential skills for the development of our projects. We also thank my co-worker Marcos Luiz Henrique, for having helped by evaluating the mathematical model and solution method proposed in this paper.
 
 
 %% The Appendices part is started with the command \appendix;
