--- a/(2023) Fraga et al.tex
+++ b/(2023) Fraga et al.tex
@@ -97,14 +97,14 @@
 %%             state={},
 %%             country={}}
 
-\author{Tatiana Balbi Fraga, Ítalo Ruan Barbosa de Aquino and Regilda da Costa e Silva Menêzes}
+%\author{Tatiana Balbi Fraga, Ítalo Ruan Barbosa de Aquino and Regilda da Costa e Silva Menêzes}
 
-\affiliation{organization={Centro Acadêmico do Agreste - Universidade Federal de Pernambuco},
-             addressline={Avenida Marielle Franco, Bairro Nova Caruaru},
-             city={Caruaru},
-             postcode={55014-900},
-             state={PE},
-             country={Brasil}}
+%\affiliation{organization={Centro Acadêmico do Agreste - Universidade Federal de Pernambuco},
+%             addressline={Avenida Marielle Franco, Bairro Nova Caruaru},
+%             city={Caruaru},
+%             postcode={55014-900},
+%             state={PE},
+%             country={Brasil}}
 
 %\affiliation{organization={},%Department and Organization
 %            addressline={}, 
